--- a/mail_service/templates/mail_service/customer_confirm_delete.html
+++ b/mail_service/templates/mail_service/customer_confirm_delete.html
@@ -11,7 +11,7 @@
                         <button type="submit" class="btn btn-success">
                             Удалить
                         </button>
-                          <a href="{% url 'mail_service:customer_list' %}" class="btn btn-success">Отмена</a>
+                          <a href="{% url 'mail_service:list' %}" class="btn btn-success">Отмена</a>
                     </form>
                 </div>
             </div>
