--- a/mail_service/templates/mail_service/base.html
+++ b/mail_service/templates/mail_service/base.html
@@ -11,17 +11,17 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Mail service</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Главная страница</a>
-        <a class="p-2 btn btn-outline-primary" href="/">Клиенты сервиса</a>
-        <a class="p-2 btn btn-outline-primary" href="/message/">Сообщения для рассылки</a>
+        <a class="p-2 btn btn-outline-primary" href="/">Создать рассылку</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list' %}">Список клиентов</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create' %}">Создать клиента</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_message' %}">Сообщения</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_message' %}">Создать сообщение</a>
     </nav>
 </div>
 <h1 class="display-4">Mail service - сервис рассылки, ни один ваш клиент не останется без письма.</h1>
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 
     <p class="lead">Ваш список клиентов.</p>
-    <a class="btn btn-primary" role="button"
-       href="{% url 'mail_service:create' %}">Создать нового клиента</a>
 </div>
 <div class="container">
     {% block content %}
