--- a/mail_service/templates/mail_service/base.html
+++ b/mail_service/templates/mail_service/base.html
@@ -11,10 +11,11 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Mail service</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Создать рассылку</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_mailing' %}">Список рассылок</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_mailing' %}">Создать рассылку</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list' %}">Список клиентов</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create' %}">Создать клиента</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_message' %}">Сообщения</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_message' %}">Список сообщений</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_message' %}">Создать сообщение</a>
     </nav>
 </div>
