--- a/mail_service/templates/mail_service/mailing_confirm_delete.html
+++ b/mail_service/templates/mail_service/mailing_confirm_delete.html
@@ -7,11 +7,11 @@
                 <div class="card_body">
                     <form method="post">
                         {% csrf_token %}
-                        <p>Удалить сообщение {{object.name}}</p>
+                        <p>Удалить рассылку {{object.name}}</p>
                         <button type="submit" class="btn btn-success">
                             Удалить
                         </button>
-                          <a href="{% url 'mail_service:list_message' %}" class="btn btn-success">Отмена</a>
+                          <a href="{% url 'mail_service:list_mailing' %}" class="btn btn-success">Отмена</a>
                     </form>
                 </div>
             </div>
