--- a/mail_service/templates/mail_service/base.html
+++ b/mail_service/templates/mail_service/base.html
@@ -13,6 +13,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_mailing' %}">Список рассылок</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_mailing' %}">Создать рассылку</a>
+        <a class="p-2 btn btn-outline-primary" href="">Отчет о рассылках</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list' %}">Список клиентов</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create' %}">Создать клиента</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_message' %}">Список сообщений</a>
