--- a/mail_service/templates/mail_service/base.html
+++ b/mail_service/templates/mail_service/base.html
@@ -11,58 +11,33 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Mail service</h5>
     <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_mailing' %}">Список рассылок</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_mailing' %}">Создать рассылку</a>
-        <a class="p-2 btn btn-outline-primary" href="">Отчет о рассылках</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list' %}">Список клиентов</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create' %}">Создать клиента</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_message' %}">Список сообщений</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_message' %}">Создать сообщение</a>
+        {% if user.is_authenticated %}
+            <form method="post" action="{% url 'users:logout' %}">
+            {% csrf_token %}
+            <button class="p-2 btn btn-outline-primary" type="submit">Выход</button>
+            <a class="p-2 btn btn-outline-primary" href="/">Главная страница</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_mailing' %}">Список рассылок</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_mailing' %}">Создать рассылку</a>
+            <a class="p-2 btn btn-outline-primary" href="">Отчет о рассылках</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_customer' %}">Список клиентов</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_customer' %}">Создать клиента</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:list_message' %}">Список сообщений</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'mail_service:create_message' %}">Создать сообщение</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:list_blog' %}">Список статей</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:create_blog' %}">Создать статью</a>
+        {% else %}
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Вход</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
+        {% endif %}
+        </form>
     </nav>
 </div>
 <h1 class="display-4">Mail service - сервис рассылки, ни один ваш клиент не останется без письма.</h1>
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-
-    <p class="lead">Ваш список клиентов.</p>
 </div>
 <div class="container">
     {% block content %}
     {% endblock %}
-
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-        <div class="row">
-            <div class="col-12 col-md">
-                SkyStore
-                <small class="d-block mb-3 text-muted">&copy; 2023</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Категории</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Рассылки</a></li>
-                    <li><a class="text-muted" href="#">Телеграм боты</a></li>
-                    <li><a class="text-muted" href="#">Полезные утилиты</a></li>
-                    <li><a class="text-muted" href="#">Веб-приложения</a></li>
-                    <li><a class="text-muted" href="#">Микросервисы</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Дополнительно</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Мы пишем</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>О нас</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="/">Контакты</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
 </body>
 </html>
